--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ var _hmt = _hmt || [];
         <h3 class="contact-title"  style="margin-top: -15pt" >联系方式</h3>
         <ul>
         <font size="2" ><strong>Email:</strong></font>
+        <font size="2">tensor.li@polyu.edu.hk </font>
         <font size="2">ljn-vmc@pku.edu.cn </font>
           <br>
       </ul>
