--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: 0px 0px 0px 5px" >2024.02, <strong>我和周雨凝结婚啦！</strong></li>
+<!--       <li style="margin: 0px 0px 0px 5px" >2024.02, <strong>我和周雨凝结婚啦！</strong></li> -->
       <li style="margin: 0px 0px 0px 5px" >2023.07, 一篇关于多人姿态估计的综述论文被<strong>计算机学报</strong>接收。</li>
       <li style="margin: 0px 0px 0px 5px" >2023.02, 一篇关于多人姿态估计的论文被<strong>IEEE TIP</strong>接收。</li>
       <li style="margin: 0px 0px 0px 5px" >2022.06, 通过了博士论文答辩。</li>
